# crust-interface-patara

./: .gitignore  LICENSE  README.md  example.py  example_mainnet.py  example_shadow.py  pyproject.toml  requirements.txt  sample_file.txt  setup.py
crust-interface-patara/: constants.py
crust_file_uploader/: __init__.py  constants.py  decorators.py  exceptions.py  file_uploader.py  mainnet.py  shadow.py  utils.py  web3_gateway.py
crust_file_uploader/js_src/: package.json  upload.js
crustinterface/: __init__.py  base.py  constants.py  decorators.py  parachain.py  shadow.py
