[tool.poetry]
name = "crust-interface-patara"
version = "0.1.0"
description = "A simple tool to interact with Crust Shadow and Crust Mainnet. Under development"
authors = ["PaTara43 <p040399@outlook.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
substrate-interface = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
